# fastapi_project

./: Dockerfile  pyproject.toml
practice/: main.py
