[tool.poetry]
name = "practice"
version = "0.1.0"
description = ""
authors = ["Aamirshazad <amiralicomsats3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.2"}
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
